...
            HStack(spacing: 12) {

                Image(systemName: "envelope.fill")
                    .foregroundStyle(primary)

                TextField(
                    "Enter your email",
                    text: $vm.email
                )
                .textInputAutocapitalization(.never)
                .keyboardType(.emailAddress)
                .focused(
                    $focusedField,
...

                Group {

                    if showPassword {

                        TextField(
                            "Enter your password",
                            text: $vm.password
                        )

                    } else {

                        SecureField(
...
        } label: {

            ZStack {

                Text(
                    isLogin
                    ? "Sign In"
                    : "Create Account"
                )
                .font(.headline)
                .fontWeight(.bold)
            }
            .frame(
...
